Revert "GIA-329 Corrections in accordance with the requirements"
This reverts commit 8fdf07b9a8d5246f921cf3909234c40c0b232933.